fixed description margin and also set the height of my image container so things dont jump around -switched version of jquery we use'

--- a/client/src/overview/styles/style.css
+++ b/client/src/overview/styles/style.css
@@ -171,11 +171,10 @@ ul {
 }
 #main-image {
   width: 100%;
-  max-height: 600px;
   height: auto;
   max-height: 700px;
-  max-width: 97%;
   cursor: pointer;
+  object-fit: contain
 }
 
 #main-image-modal {
@@ -234,6 +233,9 @@ ul {
   display: flex;
   justify-content: center;
   align-items:center;
+  height: 700px;
+  width: 825px;
+
 }
 #image-modal-frame {
   height: 800px;
